# Referral-System

./: .env.example  .gitignore  README.md  REST API basics- CRUD, test & variable.postman_collection.json  create-tg-session.py  pyproject.toml
docker/: Dockerfile
referral/account/: models.py  serializers.py  service.py  utils.py  views.py
referral/account/migrations/: 0001_initial.py  0002_account_register_code.py  0003_alter_account_invite_code.py
referral/account/templates/: end_reg.html  profile.html  send_code.html  start_reg.html  verify_code.html
referral/config/: settings.py  urls.py
